--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   build:
+    filters:
+      branchs:
+        only: master
     docker:
       - image: circleci/node:10.16.3
     steps:
@@ -17,3 +20,6 @@ jobs:
       - run:
           name: build
           command: npm run build
+      - run:
+          name: deploy
+          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_DEPLOY_TOKEN --project=$FIREBASE_PROJECT
